Fri Aug  9 17:57:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/post.h:
        * ace/pre.h:
          Disable warning 8127 with Embarcadero C++ BuilderXE4, it is
          given incorrectly and reported as QC 117740.

Fri Aug  9 17:46:31 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Use C++ casts instead of C-style casts for ACE_DEFAULT_BASE_ADDR.
          This fixes bugzilla 4113, thanks to Yogesh Sharma
          <Yogesh dot Sharma at saabsensis dot com> for reporting this and
          supplying the patch

Fri Aug  9 16:53:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Linux kernel 2.5.8 and newer have sched_getaffinity and
          sched_getaffinity

Fri Aug  9 14:27:56 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_22_DLL.h:
        * tests/Compiler_Features_22_DLL.cpp:
        * tests/Compiler_Features_22_DLL_Export.h:
        * tests/tests.mpc:
          New test for template method specialization combined with
          dllexport

Fri Aug  9 08:30:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/*.h:
          Use /**/ for include of config-lite.h to not get it in all
          include diagrams with doxygen

Fri Aug  9 08:24:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Also check the DAnCE DynAny_Handler

Fri Aug  9 08:14:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/arpa/os_inet.h:
        * ace/os_include/netinet/os_in.h:
        * ace/os_include/netinet/os_tcp.h:
          Include config-lite.h instead of config-all.h to break some
          circular includes

Fri Aug  9 08:05:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Ignore CORBA throw path

Thu Aug  8 18:54:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
