@@ -3,6 +3,10 @@
 #include "RLECompressor.h"
 #include "ace/OS_NS_string.h"
 
+#if defined (__BORLANDC__)
+#  pragma option push -w-8072
+# endif
+
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 ACE_RLECompressor::ACE_RLECompressor(void)
@@ -156,3 +160,7 @@ ACE_RLECompressor::decompress( const void *in_ptr,
 
 // Close versioned namespace, if enabled by the user.
 ACE_END_VERSIONED_NAMESPACE_DECL
+
+#if defined (__BORLANDC__)
+# pragma option pop
+#endif
