@@ -1,3 +1,11 @@
+Sat Aug 10 17:10:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Compression/rle/RLECompressor.cpp:
+          Disable warning with bcc32
+
+        * tests/Compiler_Features_22_DLL.h:
+          Add include pre/post.h
+
 Fri Aug  9 17:57:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/post.h:
